<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="50dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tx1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="24dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tx1"
                android:layout_marginTop="23dp"
                android:layout_marginLeft="10dp"
                android:textSize="12dp"
                android:background="@drawable/text_border"
                android:text="@string/category_1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView2"
                android:layout_toRightOf="@+id/textView2"
                android:layout_marginLeft="10dp"
                android:textSize="12dp"
                android:background="@drawable/text_border"
                android:text="@string/category_2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView2"
                android:layout_toRightOf="@+id/textView3"
                android:layout_marginLeft="10dp"
                android:textSize="12dp"
                android:background="@drawable/text_border"
                android:text="@string/category_3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView2"
                android:layout_toRightOf="@+id/textView4"
                android:layout_marginLeft="10dp"
                android:textSize="12dp"
                android:background="@drawable/text_border"
                android:text="@string/category_4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="12dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/text_border"
                android:text="@string/category_5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView6"
                android:layout_toRightOf="@+id/textView6"
                android:layout_marginLeft="10dp"
                android:textSize="12dp"
                android:background="@drawable/text_border"
                android:text="@string/category_6" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>




</RelativeLayout>