<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="50dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="15dp"
                android:textColor="#000000"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView8"
                android:layout_below="@+id/textView8"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="15dp"
                android:textColor="#000000"
                android:text="@string/age" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView9"
                android:layout_below="@+id/textView9"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="15dp"
                android:textColor="#000000"
                android:text="@string/location" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView10"
                android:layout_below="@+id/textView10"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="15dp"
                android:textColor="#000000"
                android:text="@string/nationality" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView11"
                android:layout_below="@+id/textView11"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="15dp"
                android:textColor="#000000"
                android:text="@string/fb_page" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView12"
                android:layout_marginTop="20dp"
                android:layout_alignStart="@+id/textView11"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="15dp"
                android:textColor="#000000"
                android:text="@string/Web" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView8"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:text="Male" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView9"
                android:layout_alignEnd="@+id/textView14"
                android:text="24" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView11"
                android:layout_alignEnd="@+id/textView15"
                android:text="Geneva" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView11"
                android:layout_alignEnd="@+id/textView16"
                android:text="Swiss" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView12"
                android:layout_alignEnd="@+id/textView17"
                android:text="sam_jac@facebook.com" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView13"
                android:layout_alignEnd="@+id/textView18"
                android:text="www.spordy.com" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>




</RelativeLayout>